--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -42,7 +42,7 @@
      </servlet-mapping>
      <servlet-mapping>
      	<servlet-name>OrderServlet</servlet-name>
-     	<url-pattern>/OrderServlet</url-pattern>
+     	<url-pattern>/OrderServlet/*</url-pattern>
      </servlet-mapping>
      
 </web-app>
